add graphql